[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/mobile_controls.gd" id="1"]

[node name="MobileControls" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="JoystickArea" type="Control" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -220.0
offset_right = 220.0
offset_bottom = -20.0
grow_vertical = 0
mouse_filter = 1

[node name="Background" type="ColorRect" parent="JoystickArea"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 200.0
color = Color(0.08, 0.08, 0.1, 0.32)

[node name="Knob" type="ColorRect" parent="JoystickArea/Background"]
layout_mode = 0
offset_left = 70.0
offset_top = 70.0
offset_right = 130.0
offset_bottom = 130.0
color = Color(0.92, 0.94, 1, 0.72)

[node name="ButtonsRoot" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -412.0
offset_top = -252.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0

[node name="AttackButton" type="Button" parent="ButtonsRoot"]
offset_left = 254.0
offset_top = 126.0
offset_right = 394.0
offset_bottom = 236.0
focus_mode = 0
text = "ATK"

[node name="JumpButton" type="Button" parent="ButtonsRoot"]
offset_left = 112.0
offset_top = 88.0
offset_right = 238.0
offset_bottom = 184.0
focus_mode = 0
text = "JUMP"

[node name="RollButton" type="Button" parent="ButtonsRoot"]
offset_left = 228.0
offset_top = 18.0
offset_right = 354.0
offset_bottom = 100.0
focus_mode = 0
text = "ROLL"

[node name="GuardButton" type="Button" parent="ButtonsRoot"]
offset_left = 0.0
offset_top = 118.0
offset_right = 122.0
offset_bottom = 208.0
focus_mode = 0
text = "GUARD"

[node name="EstusButton" type="Button" parent="ButtonsRoot"]
offset_left = 120.0
offset_top = 188.0
offset_right = 244.0
offset_bottom = 250.0
focus_mode = 0
text = "ESTUS"

[node name="Skill1Button" type="Button" parent="ButtonsRoot"]
offset_left = 0.0
offset_top = 42.0
offset_right = 104.0
offset_bottom = 112.0
focus_mode = 0
text = "SK1"

[node name="Skill2Button" type="Button" parent="ButtonsRoot"]
offset_left = 106.0
offset_top = 0.0
offset_right = 210.0
offset_bottom = 70.0
focus_mode = 0
text = "SK2"
